--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Andolo</title>
+	<link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
+	<div class="Bla">
+  <a class="He" href="index.html">Heim</a>
+  <a href="index4.html">Om meg</a>
+  <a href="index3.html">Eksempel</a>
+</div>
 	<h1>hei</h1>
+	
+	<footer id ="bon">
+		<h3>©2021</h3>
+		<h3>Andreas</h3>
+	</footer>
 </body>
 </html>
