--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@ body {
 <body>
 
 			<div class="Bla">
-  <a class="He" href="index.html">Heim</a>
+  <a class="He" href="Portefolie_Main.html">Heim</a>
   <a href="index4.html">Om meg</a>
   <a href="index3.html">exsempel</a>
 </div>
