redesign and oppdated projekt

--- a/Art.html
+++ b/Art.html
@@ -1,3 +1,4 @@
+<!--©Andolo-->
 <!doctype html>
 <html>
 <head>
@@ -7,15 +8,20 @@
 </head>
 
 <body>
-		<div class="Bla">
-  <a class="He" href="Portefolie_Main.html">Heim</a>
-
+		<div class="Bla" id="Bla">
+ 
 </div>
-	<h1>123</h1>
-	
+<div id = "main">
+    <div id="title">
+	    Art
+    </div>
+</div>
 	<footer id ="bon">
 		<h3>©2021</h3>
-		<h3>Andreas</h3>
+		<h3>Andolo</h3>
 	</footer>
+
+<script src ="js/Code.js"></script>
+
 </body>
 </html>
