--- a/Code.html
+++ b/Code.html
@@ -3,18 +3,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Andolo</title>
+<title>Exsempel</title>
 	<link rel="stylesheet" href="css/index.css">
-
-
-
-
-<style>
+	<style>
 body {
 	
-	background-image: url("img/KursBakrund2.png");
+	background-image: url("img/CodeBakrund.png");
 	background-attachment: fixed;
-    background-size: cover;
+    background-size:contain;
     image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
     image-rendering: -moz-crisp-edges;          /* Firefox                        */
     image-rendering: -o-crisp-edges;            /* Opera                          */
@@ -22,47 +18,27 @@ body {
     image-rendering: pixelated;                 /* Universal support since 2021   */
     -ms-interpolation-mode: nearest-neighbor;  
 }
-
-</style>
-
+		
+</style>	
 </head>
-
 <body>
-	<div class="Bla" id="Bla">
-    </div>
-
+	
+<div class="Bla" id="Bla">
+</div>
 <div id = "main">
-    <div id = "title">
-        highlights
-	</div>
-
-	<div class = "grid-container">
-        <div id = "News">
-			<div id = "title"> 
-				Code
-			</div>
-			<a>i know how to exit vim :q</a>
-	</div>
-            
-	    <div id = "News">
-			<div id = "title"> 
-				Art
-			</div>
-
-		<a>Oil paint</a>
-	    </div>
-    </div>    
+    <div id="title">
+	    Code
+    </div>
+	<a href="legacy code.html">legacy code page</a>
 </div>
 
 
-    
-	
 	
 	<footer id ="bon">
 		<h3>©2021</h3>
-		<h3>Andolo</h3>
+		<h3>Andreas</h3>
 	</footer>
-	
-	<script src ="js/Code.js"></script>
+
+<script src ="js/Code.js"></script>
 </body>
 </html>
