--- a/inlevering 1.html
+++ b/inlevering 1.html
@@ -14,12 +14,10 @@ body {
 		
 </style>
 </head>
-
+<!--©Andolo-->
 <body>
-				<div class="Bla">
-  <a class="He" href="Portefolie_Main.html">Heim</a>
-					
-			
+<div class="Bla" id="Bla">
+	
 </div>			
 	
 <button id="ta">Bilde</button>
@@ -38,5 +36,6 @@ body {
 	<script src="js/Code2.js">
 	</script>
 	
+<script src ="js/Code.js"></script>
 </body>
 </html>
