--- a/legacy code.html
+++ b/legacy code.html
@@ -1,3 +1,4 @@
+<!--©Andolo-->
 <!doctype html>
 <html>
 <head>
@@ -18,17 +19,17 @@ body {
 
 <body>
 
-			<div class="Bla">
-  <a class="He" href="Portefolie_Main.html">Heim</a>
-  <a href="index4.html">Om meg</a>
-  <a href="index3.html">exsempel</a>
+			<div class="Bla" id="Bla">
+ 
 </div>
 	<h1>exsempel</h1>
 	<a href="inlevering 1.html"><img src="img/oppgave1 knap.png"  width="300" height="100"></a>
-	<script src ="js/Code.js"></script>
+	
 	<footer id ="bon">
 		<h3>©2021</h3>
 		<h3>Andreas</h3>
 	</footer>
+
+<script src ="js/Code.js"></script>
 </body>
 </html>
