--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,3 +1,4 @@
+<!--©Andolo-->
 <!doctype html>
 <html>
 <head>
@@ -7,16 +8,21 @@
 </head>
 
 <body>
-		<div class="Bla">
-  <a class="He" href="index.html">Heim</a>
-  <a href="index4.html">Om meg</a>
-  <a href="index3.html">exsempel</a>
+			<div class="Bla" id="Bla">
 </div>
-	<h1>123</h1>
-	
+
+<div id = "main">
+    <div id="title">
+	    About me
+    </div>
+</div>
+
 	<footer id ="bon">
 		<h3>©2021</h3>
 		<h3>Andreas</h3>
 	</footer>
+
+<script src ="js/Code.js"></script>
 </body>
 </html>
+
