--- a/Code.html
+++ b/Code.html
@@ -29,6 +29,25 @@ body {
     <div id="title">
 	    Code
     </div>
+	<div>
+        list of code software and code language i use
+		<ul>
+			<li>Uneral engine</li>
+			<li>Visual stidio code</li>
+			<li>NeoVim</li>
+			<li>Visual stidio</il>
+			<li>xampp</li>
+			<li>Unity</li>
+			<li>GitHub</li>	
+			<li>C</li>
+			<li>C++</li>
+			<li>C#</li>
+			<li>javascript</li>
+			<li>PHP</li>
+			<li>nodejs</li>
+		  </ul>
+	</div>
+
 	<a href="legacy code.html">legacy code page</a>
 </div>
 
