--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,6 +15,14 @@
     <div id="title">
 	    About me
     </div>
+	<a>
+        I am Andreas butt my internet name is Andolo.
+	</a>
+	<div>
+	    <a>
+		    i am a programer and artist and the founder and owner of the company Loomygames Multimedia Høgestøl
+	    </a>
+    </div>
 </div>
 
 	<footer id ="bon">
