--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ body {
     </div>
 
 <div id = "main">
+	<div id = "title">
+        Andolo  portfolio
+	</div>
+
     <div id = "title">
         highlights
 	</div>
@@ -41,15 +45,25 @@ body {
 			<div id = "title"> 
 				Code
 			</div>
-			<a>i know how to exit vim :q</a>
-	</div>
+			<a>
+				i know how to exit vim :q
+
+			</a>
+		    <div>
+				<a>virtual reality application in Unreal engine</a>
+			    <a><img src="img/Screenshot 2024-01-12 093307.png" width="600" height="430" alt="Code1"></a>
+		    </div>
+	    </div>
             
 	    <div id = "News">
 			<div id = "title"> 
 				Art
 			</div>
-
-		<a>Oil paint</a>
+			<a>gnom 3D models for a web application</a>
+			<div>
+			    <a><img src="img/Nise_gnom3Dmodel.png" width="600" height="430" alt="Code1"></a>
+		    </div>
+		
 	    </div>
     </div>    
 </div>
