--- a/Art.html
+++ b/Art.html
@@ -15,6 +15,21 @@
     <div id="title">
 	    Art
     </div>
+	<a>
+		list of art mediums and software that i use
+	</a>
+	<ul>
+		<li>Oil Paint</li>
+		<li>acrylic paint</li>
+		<li>watercolor</li>
+		<li>ink</il>
+		<li>Blender</li>
+		<li>Maya</li>
+		<li>zbrush</li>	
+		<li>adobe Substance 3D Painter</li>
+		<li>Clip studio</li>
+	  </ul>
+
 </div>
 	<footer id ="bon">
 		<h3>©2021</h3>
