--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@ body {
 
 			</a>
 		    <div>
-				<a>virtual reality application in Unreal engine</a>
+				<div>
+					<a>virtual reality application in Unreal engine</a>
+				</div>		
 			    <a><img src="img/Screenshot 2024-01-12 093307.png" width="600" height="430" alt="Code1"></a>
 		    </div>
+			<div>
+				<div>
+					<a>LORE OF FANTASY game engine </a>
+				</div>
+				<a><img src="img/Lore of Fantasy.png"width="600" height="430"></a>
+			</div>
 	    </div>
             
 	    <div id = "News">
@@ -67,14 +75,10 @@ body {
 	    </div>
     </div>    
 </div>
-
-
-    
-	
-	
+ 
 	<footer id ="bon">
-		<h3>©2021</h3>
-		<h3>Andolo</h3>
+		<h3>©Andolo2021-2024</h3>
+		<h3>Games are property of their respective owners</h3>
 	</footer>
 	
 	<script src ="js/Code.js"></script>
