--- a/Art.html
+++ b/Art.html
@@ -15,6 +15,7 @@
     <div id="title">
 	    Art
     </div>
+	<div id = "prosjekt">
 	<a>
 		list of art mediums and software that i use
 	</a>
@@ -22,14 +23,14 @@
 		<li>Oil Paint</li>
 		<li>acrylic paint</li>
 		<li>watercolor</li>
-		<li>ink</il>
-		<li>Blender</li>
-		<li>Maya</li>
+		<li>ink</il>		
+		<li>autodesk Maya</li>
 		<li>zbrush</li>	
 		<li>adobe Substance 3D Painter</li>
+		<li>Blender</li>
 		<li>Clip studio</li>
 	  </ul>
-
+	</div>
 </div>
 	<footer id ="bon">
 		<h3>©2021-2024</h3>
