--- a/Code.html
+++ b/Code.html
@@ -29,7 +29,7 @@ body {
     <div id="title">
 	    Code
     </div>
-	<div>
+	<div id = "prosjekt">
         list of code software and code language i use
 		<ul>
 			<li>Uneral engine</li>
@@ -48,7 +48,7 @@ body {
 		  </ul>
 	</div>
 
-	<a href="legacy code.html">legacy code page</a>
+	
 </div>
 
 
