--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,13 +15,15 @@
     <div id="title">
 	    About me
     </div>
+	<div id = "uedocs">
 	<a>
         I am Andreas butt my internet name is Andolo.
 	</a>
 	<div>
 	    <a>
-		    i am a programer and artist and the founder and owner of the company Loomygames Multimedia Høgestøl
+		    i am a programer and artist and the founder and owner of the company Loomygames Høgestøl Multimedia 
 	    </a>
+	</div>
     </div>
 </div>
 
