--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ body {
 				i know how to exit vim :q
 
 			</a>
-		    <div>
+		    <div id = "prosjekt">
 				<div>
 					<a>virtual reality application in Unreal engine</a>
 				</div>		
 			    <a><img src="img/Screenshot 2024-01-12 093307.png" width="600" height="430" alt="Code1"></a>
 		    </div>
-			<div>
-				<div>
+			<div id = "prosjekt">
+				<div >
 					<a>LORE OF FANTASY game engine </a>
 				</div>
 				<a><img src="img/Lore of Fantasy.png"width="600" height="430"></a>
@@ -67,11 +67,12 @@ body {
 			<div id = "title"> 
 				Art
 			</div>
+			<div id = "prosjekt">
 			<a>gnom 3D models for a web application</a>
 			<div>
 			    <a><img src="img/Nise_gnom3Dmodel.png" width="600" height="430" alt="Code1"></a>
 		    </div>
-		
+		</div>
 	    </div>
     </div>    
 </div>
