--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,7 +15,7 @@
     <div id="title">
 	    About me
     </div>
-	<div id = "uedocs">
+	<div id = "prosjekt">
 	<a>
         I am Andreas butt my internet name is Andolo.
 	</a>
