--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@ body {
 				i know how to exit vim :q
 
 			</a>
-		    <div id = "prosjekt">
-				<div>
-					<a>virtual reality application in Unreal engine</a>
-				</div>		
-			    <a><img src="img/Screenshot 2024-01-12 093307.png" width="600" height="430" alt="Code1"></a>
-		    </div>
+		   
 			<div id = "prosjekt">
 				<div >
-					<a>LORE OF FANTASY game engine </a>
+					<a>Game engine for LORE OF FANTASY</a>
 				</div>
 				<a><img src="img/Lore of Fantasy.png"width="600" height="430"></a>
 			</div>
+			<div id = "prosjekt">
+				<div>
+					<a>Virtual reality application made in Unreal engine</a>
+				</div>		
+			    <a><img src="img/Screenshot 2024-01-12 093307.png" width="600" height="430" alt="Code1"></a>
+		    </div>
 	    </div>
             
 	    <div id = "News">
@@ -68,11 +69,18 @@ body {
 				Art
 			</div>
 			<div id = "prosjekt">
-			<a>gnom 3D models for a web application</a>
+				<a>Artwork for the discord bot Overmonting</a>
+				<div>
+					<a><img src="img\Overmountingさん4.1.png" width="600" height="430" alt="Code1"></a>
+				</div>
+			</div>
+			<div id = "prosjekt">
+			<a>3D gnom models for a web application</a>
 			<div>
 			    <a><img src="img/Nise_gnom3Dmodel.png" width="600" height="430" alt="Code1"></a>
 		    </div>
 		</div>
+		
 	    </div>
     </div>    
 </div>
@@ -81,7 +89,7 @@ body {
 		<h3>©Andolo2021-2024</h3>
 		<h3>Games are property of their respective owners</h3>
 	</footer>
-	
+
 	<script src ="js/Code.js"></script>
 </body>
 </html>
