--- a/Art.html
+++ b/Art.html
@@ -5,6 +5,21 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 	<link rel="stylesheet" href="css/index.css">
+	<style>
+		body {
+			
+			background-image: url("../img/portfolio Artpage1.png");
+			background-attachment: fixed;
+			background-size: cover;
+			image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+			image-rendering: -moz-crisp-edges;          /* Firefox                        */
+			image-rendering: -o-crisp-edges;            /* Opera                          */
+			image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+			image-rendering: pixelated;                 /* Universal support since 2021   */
+			-ms-interpolation-mode: nearest-neighbor;  
+		}
+		
+		</style>
 </head>
 
 <body>
